@@ -523,7 +523,7 @@ on_calc_wnd_window_state_event         (GtkWidget       *widget,
     GdkWindowState state = wstate->new_window_state;
     GdkWindowState mask = wstate->changed_mask;
 
-    printf("%04X %04X\n", wstate->new_window_state, wstate->changed_mask);
+    //printf("%04X %04X\n", wstate->new_window_state, wstate->changed_mask);
 
     if((mask & GDK_WINDOW_STATE_ICONIFIED) && (state & GDK_WINDOW_STATE_ICONIFIED))
         gtk_debugger_minimize_all();
