@@ -9,7 +9,9 @@ To do:
 	- splitted memory mapping (init/exit)
 	- SR/PC were not shown any longer with exception (fixed)
 	- added refresh button to mem window
-	- update regs when changing the Supervisor bit.
+	- update regs when changing the Supervisor bit
+	- clicking OK in the ROM version without selection makes box crash
+	- bug fixes in the mem dbox searching
 
 - 27/07/2004, version 1.75: roms
 	Olivier's suggestions:
